tests/externblob/from_other_ns.sy
use some_ns

Foo :: externblob { }

create_foo : fn -> Foo : external

start :: fn do
  some_ns.use_foo' create_foo'
end

// error: A 'Foo from tests/externblob/some_ns.sy' cannot be a 'Foo from tests/externblob/from_other_ns.sy'
